--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -761,4 +761,24 @@ config TOUCHSCREEN_CYPRESS_TTSP
 
 	  If unsure, say N.
 
+config TOUCHSCREEN_MELFAS_MMS136
+	tristate "MELFAS MMS136 Touchscreen Interface"
+	depends on I2C
+	help
+		Say Y here if you want support for MELFAS
+		(with legacy  MELFAS) touchscreen controllers.
+
+		To compile this driver as a module, choose M here: the
+		module will be called melfas_ts.
+
+config TOUCH_SCREEN_BOOST_MODE
+	bool "Touch Boost Mode"
+	depends on TOUCHSCREEN_MELFAS_MMS136
+	help
+		Say Y here if you want to support for touch boost mode.
+		It boosts AP frequency up to 800 MHz during 1 second at last
+		touch point released.
+
+		If unsure, say N.
+
 endif
