--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -781,4 +781,21 @@ config TOUCH_SCREEN_BOOST_MODE
 
 		If unsure, say N.
 
+config TOUCHSCREEN_SYNAPTICS_S7301
+	tristate "SYNAPTICS S7301 Touchscreen Interface"
+	depends on I2C
+	help
+		Say Y here if you want support for SYNAPTICS S7301
+		touchscreen controllers.
+
+		To compile this driver as a module, choose M here: the
+		module will be called synaptics_ts.
+
+config TOUCHSCREEN_OLD_FW_STD
+	bool "Separate codes old firmware standrad and new firmware standard"
+	depends on TOUCHSCREEN_SYNAPTICS_S7301
+	help
+		Say Y here if you want to support for samsung old firmware
+		standard declare.
+
 endif
