--- a/drivers/net/wireless/bcm4330/Kconfig
+++ b/drivers/net/wireless/bcm4330/Kconfig
@@ -19,7 +19,7 @@ config BCMDHD_NVRAM_PATH
 
 config BCMDHD_WEXT
 	bool "Enable WEXT support"
-	depends on BCMDHD && CFG80211 = n
+	depends on BCM4330 && CFG80211 = n
 	select WIRELESS_EXT
 	select WEXT_PRIV
 	help
@@ -27,14 +27,14 @@ config BCMDHD_WEXT
 
 config DHD_USE_STATIC_BUF
 	bool "Enable memory preallocation"
-	depends on BCMDHD
+	depends on BCM4330
 	default n
 	---help---
 	  Use memory preallocated in platform
 
 config DHD_USE_SCHED_SCAN
 	bool "Use CFG80211 sched scan"
-	depends on BCMDHD && CFG80211
+	depends on BCM4330 && CFG80211
 	default n
 	---help---
 	  Use CFG80211 sched scan
