Unify espresso/espresso10: wifi
Change-Id: I5ba55644160a2a06ef64b43c90c21ef35540087c

--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -58,7 +58,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso10-bluetooth.o \
 					   board-espresso10-jack.o \
 					   board-espresso10-power.o \
-					   board-espresso10-wifi.o \
+					   board-espresso-wifi.o \
 					   board-espresso10-display.o \
 					   board-espresso10-modems.o \
 					   board-espresso10-sensor.o \
