--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -64,7 +64,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso10-sensor.o \
 					   board-espresso10-input.o \
 					   board-espresso10-vibrator.o \
-					   board-espresso10-irled.o
+					   board-espresso-irled.o
 
 obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10-muxset-r00.o \
 					   board-espresso10-muxset-r05.o \
