Unify espresso/espresso10: modems
Change-Id: I0c2e10d186594c1a5d28248e78faaf4acd701d13

--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -60,7 +60,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso10-power.o \
 					   board-espresso-wifi.o \
 					   board-espresso10-display.o \
-					   board-espresso10-modems.o \
+					   board-espresso-modems.o \
 					   board-espresso10-sensor.o \
 					   board-espresso10-input.o \
 					   board-espresso10-vibrator.o \
