Unify espresso/espresso10: jack
Change-Id: I1b392739f0c3e26a6db6467f535e1db31ba1c135

--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -56,7 +56,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso10-sdio.o \
 					   board-espresso10-connector.o \
 					   board-espresso10-bluetooth.o \
-					   board-espresso10-jack.o \
+					   board-espresso-jack.o \
 					   board-espresso10-power.o \
 					   board-espresso-wifi.o \
 					   board-espresso10-display.o \
