--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -51,7 +51,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO)	+= board-espresso-muxset-r03.o \
 
 obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso10-emif.o \
-					   board-espresso10-serial.o \
+					   board-espresso-serial.o \
 					   board-espresso10-pmic.o \
 					   board-espresso10-sdio.o \
 					   board-espresso10-connector.o \
