--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -63,7 +63,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso-modems.o \
 					   board-espresso10-sensor.o \
 					   board-espresso10-input.o \
-					   board-espresso10-vibrator.o \
+					   board-espresso-vibrator.o \
 					   board-espresso-irled.o
 
 obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10-muxset-r00.o \
