--- a/arch/arm/mach-omap2/Makefile.sec
+++ b/arch/arm/mach-omap2/Makefile.sec
@@ -59,7 +59,7 @@ obj-$(CONFIG_MACH_SAMSUNG_ESPRESSO_10)	+= board-espresso10.o \
 					   board-espresso-jack.o \
 					   board-espresso-power.o \
 					   board-espresso-wifi.o \
-					   board-espresso10-display.o \
+					   board-espresso-display.o \
 					   board-espresso-modems.o \
 					   board-espresso10-sensor.o \
 					   board-espresso10-input.o \
